新增加 maruku support 與 table css

--- a/_posts/2010-11-01-ror-4-3.md
+++ b/_posts/2010-11-01-ror-4-3.md
@@ -5,8 +5,12 @@ layout: post
 
 Rails 1.2 引進了 REST 觀念。而在 Rails 2.0 ，RESTful 更成為這個版本的主要重點之一。
 
-如果你對 [RESTful Rails](http://devpoga.wordpress.com/2008/02/17/restful-rails-%E7%B0%A1%E5%96%AE%E5%BF%83%E5%BE%97/) 不甚了解，推薦 RESTful Rails 簡單心得 這篇文章當入門磚。而希望深入了解的可以閱讀 ihower 的 [什麼是 REST跟RESTful?](http://ihower.idv.tw/blog/archives/1542) 。不過我傾向建議你看完這篇文章再去啃這兩篇。
-
+<div class="info" markdown="1">
+    <p>
+        如果你對 [RESTful Rails](http://devpoga.wordpress.com/2008/02/17/restful-rails-%E7%B0%A1%E5%96%AE%E5%BF%83%E5%BE%97/) 不甚了解，推薦 RESTful Rails 簡單心得 這篇文章當入門磚。而希望深入了解的可以閱讀 ihower 的 [什麼是 REST跟RESTful?](http://ihower.idv.tw/blog/archives/1542) 。不過我傾向建議你看完這篇文章再去啃這兩篇。
+        
+    </p>
+</div>
 <pre>
     ActionController::Routing::Routes.draw do |map|
         map.resources :blogs
